# advent-of-code

./: .nvim.lua  Cargo.toml  Pipfile  README.md  README.org  aoc  aoc.py  download_input  get_data_path  go.mod  pyproject.toml  template.go  template.py  template.rs
2021/: Cargo.toml  pyproject.toml
2021/day01/: a.py  a.rs  b.py  b.rs
2021/day02/: a.py  a.rs  b.py  b.rs
2021/day03/: a.py  a.rs  b.py  b.rs
2021/day04/: a.py  a.rs  b.py  b.rs
2021/day05/: a.py  a.rs  b.py  b.rs
2021/day06/: a.py  b.py
2021/day07/: a.py  b.py
2021/day08/: a.py  b.py
2021/day09/: a.py  b.py
2021/day10/: a.py  b.py
2021/day11/: a.py  b.py
2021/day12/: a.py  b.py
2021/day13/: a.py  b.py
2021/day14/: a.py  b.py
2021/day15/: a.py  b.py
2021/day16/: a.py  b.py
2021/day17/: a.py  b.py
2021/day18/: b.py
2021/day19/: a.py  b.py
2021/day20/: a.py  b.py
2021/day21/: a.py  b.py
2021/day22/: a.py  b.py
2021/day24/: a.py  b.py
2022/: Cargo.toml
2022/day01/: a.rs  b.rs  main.rs
2022/day02/: a.rs  b.rs
2022/day03/: a.rs  b.rs
2022/day04/: a.rs  b.rs
2022/day05/: a.rs  b.rs
2022/day06/: a.rs  b.rs
2022/day07/: a.rs  b.rs
2022/day08/: a.rs  b.rs
2022/day09/: a.rs  b.rs
2022/day10/: a.rs  b.rs
2022/day11/: a.rs  b.rs
2022/day12/: a.rs  b.rs
2022/day13/: a.rs  b.rs
2022/day14/: a.rs  b.rs
2022/day15/: a.rs  b.rs
2022/day16/: a.rs  b.rs
2023/: go.mod
2023/day01/: a.go  b.go  main.go
2023/day02/: a.go  b.go  main.go  puzzle.md
2023/day03/: a.go  b.go  main.go  puzzle.md
2023/day04/: a.go  b.go  main.go  puzzle.md
2023/day05/: a.go  b.go  main.go  puzzle.md
2023/day06/: a.go  b.go  main.go  puzzle.md
2023/day07/: a.go  b.go  main.go
2023/day08/: a.go  b.go  main.go  puzzle.md
2023/day09/: a.go  b.go  main.go
2023/day10/: a.go  b.go  main.go  puzzle.md
2023/day11/: a.go  b.go  main.go
2023/day12/: a.go  b.go  main.go
2023/day13/: a.go  b.go  main.go
2023/day14/: a.go  b.go  main.go
2023/day15/: a.go  b.go  main.go
2023/day16/: a.go  b.go  main.go
2023/day17/: a.go  b.go  main.go
2023/day18/: a.go  b.go  main.go
2023/day19/: a.go  (+2 more)
2024/: pyproject.toml
2025/: pyproject.toml
go/: go.mod  main.go
rust/: Cargo.toml
rust/aoc-2021/: Cargo.toml
rust/aoc-2021/src/: main.rs
rust/aoc-2022/: Cargo.toml
rust/aoc-2022/src/: main.rs
utils/: execute.go  execute.py  go.mod  grid.rs  input.go  input.py  lib.rs  lines.py  math.go  strconv.go
(+109 files in other folders)
