[package]
name = "aoc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="utils"
path="utils/lib.rs"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6.2"
id_tree = "1.8.0"
itertools = "0.10.5"
nom = "7.1.1"
# utils = { path = "../utils" }

[dev-dependencies]
rstest = "0.16.0"


[[bin]]
name="2022-01"
path="2022/day01/main.rs"

[[bin]]
name="2022-02"
path="2022/day02/main.rs"

