[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


default-run = "aoc-2022"
[dependencies]
color-eyre = "0.6.2"
id_tree = "1.8.0"
itertools = "0.10.5"
nom = "7.1.1"
utils = { path = "../utils" }

[dev-dependencies]
rstest = "0.16.0"
